Trim() inserções no DB

--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -123,7 +123,7 @@
 
         #div_desconto_combo,
         #div_curso_obs,
-        #div_modulos {
+        #div_modulos, #div_aluno_obs {
             min-width: 100%;
         }
         #div_desconto_combo {
