--- a/src/components/contratos/infoContrato.html
+++ b/src/components/contratos/infoContrato.html
@@ -7,14 +7,15 @@
 
             <div id='div_btn_salvar_contrato_pdf'>
                 <input type='submit' id='btn_salvar_contrato_pdf' value='Salvar Contrato PDF'/>
-
             </div>
-
             <!-------------------------Fieldset Responsável----------------------->
             <div class='fieldset' id='fieldset_resp'>
+                <div class='div_input' id='div_id_contrato'>
+                    <label>ID Contrato:</label>
+                    <input id="id_contrato" readonly='true' type="text"/>
+                </div>
                 <div class='div_input' id='div_resp_nome'>
-                    <label>Responsável:
-                    </label>
+                    <label>Responsável:</label>
                     <input id="resp_nome" readonly='true' type="text"/>
                 </div>
                 <div class='div_input' id='div_resp_genero'>
