--- a/src/components/alunos/infoAluno.html
+++ b/src/components/alunos/infoAluno.html
@@ -43,7 +43,7 @@
                 <label>Cel.:</label>
                 <input id='aluno_cel' type='text'/>
             </div>
-            <div class='div_input_info'>
+            <div class='div_input_info' id='div_aluno_obs'>
                 <label>Tel.:</label>
                 <input id='aluno_tel' type='text'/>
             </div>
