--- a/src/components/contratos/formAddContrato.html
+++ b/src/components/contratos/formAddContrato.html
@@ -246,7 +246,7 @@
                 <div id='div_curso_vencimento'>
                     <label>Dia Venc.:
                     </label>
-                    <input id="curso_vencimento" type='number'/>
+                    <input id="curso_vencimento" required='true' type='number'/>
                 </div>
                 <div id='div_curso_inicio'>
                     <label>Data de Início:
