W.I.P - Filtros Fluxo de Caixa

--- a/src/assets/css/sass/fluxo_caixa/_infoTables.scss
+++ b/src/assets/css/sass/fluxo_caixa/_infoTables.scss
@@ -5,7 +5,7 @@
         margin-bottom:20px;
     }
     table{
-        font-size:14px;
+        font-size:13px;
 
         caption{
             padding:8px;
@@ -15,8 +15,9 @@
         thead{
             th{
                 height:40px;
-                background:#ccc;
-                color:#333;
+                background:#464;
+                color:#fff;
+                padding:2px 3px;
             }  
         }
         tbody{
