--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -824,6 +824,9 @@ inputs, .input-primary {
 .tables tr:hover, .table_info tr:hover, #view_table_users tr:hover, .view_table tr:hover {
   background: #ffe;
 }
+.tables .btn_sort, .table_info .btn_sort, #view_table_users .btn_sort, .view_table .btn_sort {
+  background: #f90;
+}
 
 .table_info, #view_table_users, .view_table {
   background: #f0f0f0;
