style: ajuste de tom de cor em 'add_aula_grupo'

--- a/src/assets/css/sass/controle_aula/_form_add_aula_grupo.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula_grupo.scss
@@ -16,7 +16,7 @@ max-width: 800px;
 }
 #bg_grupo_alunos{
   border:1px solid #333;
-  background: #fffaef;
+  background: #f9f3f0;
   padding:20px 10px;
   display: flex;
   flex-wrap: wrap;
