--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1868,7 +1868,7 @@ input:disabled, textarea:disabled {
 }
 #form_add_aula_grupo #bg_grupo_alunos {
   border: 1px solid #333;
-  background: #fffaef;
+  background: #f9f3f0;
   padding: 20px 10px;
   display: flex;
   flex-wrap: wrap;
