--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -1,11 +1,13 @@
 @use "../abstracts/" as *;
 
-#form_info_aluno, .form_info {
+
+#form_info_aluno, .form_info_curso {
     @extend .form_flex_static;
-    background: #f0f0f0;
-    padding: 0;
+    background: #f0f0f0; 
+
+    overflow: hidden;
     box-shadow: none;
-    border:1px solid $primary-color;
+    border:2px solid $primary-color;
     padding:20px 40px;
     max-width: 1200px;
     input[readonly="true"]{
@@ -144,7 +146,7 @@
     }
 
     .fieldset_certificado_status{
-background: #fffff6;
+        background: #fffff6;
     }
     .fieldset_curso_info{
     }
@@ -156,17 +158,31 @@ background: #fffff6;
         margin-top:20px;
         margin-bottom:20px;
         display: block;
+        color:#333;
+
+        backdrop-filter: grayscale(30%) !important;
+
         h4 {
+
+            width:100%;
+            svg{
+                margin-top:-5px;
+                float:right;
+                margin-right: 60px;
+                width:32px !important; 
+                height: 32px !important;
+            }
+            cursor:pointer; 
             text-transform: uppercase;
-            background:#cdc;
             width: calc(100% + 20px);
             text-align: center;
             padding: 20px;
-            margin-top: -50px;
-            margin-left:-50px; 
-            margin-right: -50px;
+            margin-top: -30px;
+            margin-left:-25px; 
+            margin-right: -25px;
             margin-bottom:20px;
             width: calc(100% + 100px)
+        
         }
         fieldset {
 
@@ -206,5 +222,33 @@ background: #fffff6;
         color: #fff !important;
         background: #548b54 !important;
     }
+
+}
+
+.form_info_curso{
+    padding: 0;
+    max-height: 2000px;
+    overflow: hidden;
+    background-color: #fff !important;
+
+    h4{
+        svg{
+            transition: all ease 0.3s;
+            transform: rotate(180deg); /* Equal to rotateZ(45deg) */
+        }
+    }
+   
+}
+
+.hide_form_info_curso {
+    transition: all 1s ease-in-out;
+    max-height:60px; 
+    overflow: hidden;
+    h4{
+        svg{
+            transform: rotate(0deg) !important; /* Equal to rotateZ(45deg) */
+        }
+    }
+  
 
 }
