--- a/src/components/fluxoCaixa/formAddPagMensalidade.html
+++ b/src/components/fluxoCaixa/formAddPagMensalidade.html
@@ -10,11 +10,9 @@
 
             <div class='div_inputs div_aluno'>
                 <label>Aluno</label>
-            <input required id='select_aluno_pag' style='border:1px solid #ccc' type='text' list='alunos_pag_datalist'>
+            <input required id='select_aluno_pag' type='text' list='alunos_pag_datalist'>
                 <datalist id='alunos_pag_datalist'>
                 </datalist>
-               
-                <select style='display:none;' required id='main_select_aluno'></select>
             </div>
             <div class='div_inputs div_curso'>
                 <label>Curso</label>
