feat: input pesquisa de aluno em controle de aula
foi adicionado um input de pesquisa para selecionar o aluno
em controle de aula com botão para alternar entre o select
e o input

--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -180,7 +180,9 @@ grid-template-columns: minmax(160px, 14%) 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
   }
 //-------------------------------
-
+.hide{
+  display:none;
+}
 .components{
   h3{text-align: center;}
 }
