--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -28,15 +28,17 @@
       display: block;
       padding: 10px;
       border-right:0px;
-
     }
-
+    #btn_alter_tipo_selecao{
+      font-size: 10px;
+      padding:5px;
+    }
     .div_input {
       display:flex;
       float: left;
       justify-content: flex-start;
       flex-grow: 1;
-      select{
+      select, input{
           padding: 10px;
           border: $border-set-default;
           font-weight: bold;
