--- a/src/assets/css/sass/alunos/_form_add_certificado.scss
+++ b/src/assets/css/sass/alunos/_form_add_certificado.scss
@@ -14,6 +14,16 @@
             min-width: 300px;
             flex-grow: 1;
         }
+    
+    }
+    #div_datas{
+     
+    }
+    #curso_carga_horaria{
+        width:50px !important;
+        max-width:50px !important;
+        min-width: auto !important;
+     
     }
     #certificado_cod, #aluno_ra{
         max-width:110px !important;
