--- a/src/components/login/index.html
+++ b/src/components/login/index.html
@@ -13,14 +13,14 @@
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                     </svg>
                 </label>
-                <input placeholder='Email do usuário' type='text' value='kleber_germano@outlook.com' id='user_name'></div>
+                <input placeholder='Email do usuário' type='text' value='' id='user_name'></div>
             <div>
                 <label>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewbox="0 0 16 16">
                         <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
                     </svg>
                 </label>
-                <input placeholder='Insira sua senha' type='password' value='devian123' id='password'>
+                <input placeholder='Insira sua senha' type='password' value='' id='password'>
             </div>
             <input type='submit' value='Entrar'>
         </form>
