fix: template talão de pagamento
layout das folhas de talão de pagamento corrigidos e reajustados

--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -146,6 +146,7 @@
     }
 
     .fieldset_curso_status{
+        display:none;
         
         .div_select_curso_status{
             max-width: 240px;
@@ -198,6 +199,7 @@
                 height: 32px !important;
             }
             .title_status{
+                display: none;
               margin-top: -5px;
               margin-right:20px;
                 float:right;
