--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3184,6 +3184,9 @@ option[disabled] {
 #form_info_aluno .fieldset #aluno_ra, #form_info_aluno .fieldset #resp_end_numero, #form_info_aluno .fieldset #aluno_end_numero, #form_info_aluno .fieldset #aluno_genero, #form_info_aluno .fieldset #resp_genero, .form_info_curso .fieldset #aluno_ra, .form_info_curso .fieldset #resp_end_numero, .form_info_curso .fieldset #aluno_end_numero, .form_info_curso .fieldset #aluno_genero, .form_info_curso .fieldset #resp_genero {
   max-width: 80px;
 }
+#form_info_aluno .fieldset_curso_status, .form_info_curso .fieldset_curso_status {
+  display: none;
+}
 #form_info_aluno .fieldset_curso_status .div_select_curso_status, .form_info_curso .fieldset_curso_status .div_select_curso_status {
   max-width: 240px;
 }
@@ -3226,6 +3229,7 @@ option[disabled] {
   height: 32px !important;
 }
 #form_info_aluno .bg_curso h4.title_info_cursos .title_status, .form_info_curso .bg_curso h4.title_info_cursos .title_status {
+  display: none;
   margin-top: -5px;
   margin-right: 20px;
   float: right;
