refactor: refatoração "infoAluno.js"

--- a/src/assets/css/sass/alunos/_info_aluno.scss
+++ b/src/assets/css/sass/alunos/_info_aluno.scss
@@ -146,7 +146,6 @@
     }
 
     .fieldset_curso_status{
-        display:none;
         
         .div_select_curso_status{
             max-width: 240px;
@@ -199,13 +198,14 @@
                 height: 32px !important;
             }
             .title_status{
-                display: none;
               margin-top: -5px;
               margin-right:20px;
                 float:right;
                 border:1px solid #ccc;
+                background:#fafafa;
                 border-radius: 5px;
                 padding:5px; text-align: center;
+                color:green;
             }
             
             &:active{
